[package]
name = "game3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9"}
bevy_kira_audio = {version = "0.13.0", features = ["wav"]}
bevy_mouse_tracking_plugin = "0.5.3"
bevy_rapier2d = "0.20.0"
rand = "0.8.5"